--- a/03_classification.ipynb
+++ b/03_classification.ipynb
@@ -4368,7 +4368,7 @@
       },
       "outputs": [],
       "source": [
-        "from collections import Counter\n",
+        "from collections import Counter #It counts how many emails have each structure\n",
         "\n",
         "def structures_counter(emails):\n",
         "    structures = Counter()\n",
@@ -4580,15 +4580,15 @@
       },
       "outputs": [],
       "source": [
-        "import re\n",
+        "import re #Used to search, remove, and replace patterns in text\n",
         "from html import unescape\n",
         "\n",
-        "def html_to_plain_text(html):\n",
+        "def html_to_plain_text(html):#an email written in HTML\n",
         "    text = re.sub('<head.*?>.*?</head>', '', html, flags=re.M | re.S | re.I)\n",
         "    text = re.sub('<a\\s.*?>', ' HYPERLINK ', text, flags=re.M | re.S | re.I)\n",
         "    text = re.sub('<.*?>', '', text, flags=re.M | re.S)\n",
         "    text = re.sub(r'(\\s*\\n)+', '\\n', text, flags=re.M | re.S)\n",
-        "    return unescape(text)"
+        "    return unescape(text) #Convert HTML symbols to normal text"
       ]
     },
     {
@@ -4766,9 +4766,9 @@
       ],
       "source": [
         "try:\n",
-        "    import nltk\n",
+        "    import nltk#Natural Language Toolk,itUsed for text processing\n",
         "\n",
-        "    stemmer = nltk.PorterStemmer()\n",
+        "    stemmer = nltk.PorterStemmer()#Keeps the root meaning and Removes endings from words\n",
         "    for word in (\"Computations\", \"Computation\", \"Computing\", \"Computed\", \"Compute\", \"Compulsive\"):\n",
         "        print(word, \"=>\", stemmer.stem(word))\n",
         "except ImportError:\n",
@@ -4955,7 +4955,7 @@
       },
       "outputs": [],
       "source": [
-        "from scipy.sparse import csr_matrix\n",
+        "from scipy.sparse import csr_matrix#which is used to store large sparse matrices efficiently (saving memory by keeping only non-zero values).\n",
         "\n",
         "class WordCounterToVectorTransformer(BaseEstimator, TransformerMixin):\n",
         "    def __init__(self, vocabulary_size=1000):\n",
